SF Primes/src/objects/Top_125_Ranking__c.object
<CustomObject>
    <description>NADA top 125 ranking data for a specific account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Top 125 Ranking</relationshipLabel>
        <relationshipName>R00N40000001ldb9EAA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Revenue__c</fullName>
        <label>Group Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_CreateDate__c</fullName>
        <label>SLX CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLX_ID__c</fullName>
        <label>SLX ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Dealerships__c</fullName>
        <label>Total Dealerships</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fleet_Units__c</fullName>
        <label>Total Fleet Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_New_Cars__c</fullName>
        <label>Total New Cars</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Used_Cars__c</fullName>
        <label>Total Used Cars</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Wholesale_Units__c</fullName>
        <label>Total Wholesale Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Top 125 Ranking</label>
    <listViews>
        <fullName>All2003Top100Dealers</fullName>
        <columns>Account__c</columns>
        <columns>Year__c</columns>
        <columns>Rank__c</columns>
        <columns>Total_Dealerships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2003</value>
        </filters>
        <label>All - 2003 Top 100 Dealers</label>
    </listViews>
    <listViews>
        <fullName>All2004Top100Dealers</fullName>
        <columns>Account__c</columns>
        <columns>Year__c</columns>
        <columns>Rank__c</columns>
        <columns>Total_Dealerships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2004</value>
        </filters>
        <label>All - 2004 Top 100 Dealers</label>
    </listViews>
    <listViews>
        <fullName>All2005Top100Dealers</fullName>
        <columns>Account__c</columns>
        <columns>Year__c</columns>
        <columns>Rank__c</columns>
        <columns>Total_Dealerships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2005</value>
        </filters>
        <label>All - 2005 Top 100 Dealers</label>
    </listViews>
    <listViews>
        <fullName>All2006Top100Dealers</fullName>
        <columns>Account__c</columns>
        <columns>Year__c</columns>
        <columns>Rank__c</columns>
        <columns>Total_Dealerships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2006</value>
        </filters>
        <label>All - 2006 Top 100 Dealers</label>
    </listViews>
    <listViews>
        <fullName>All2007Top125Dealers</fullName>
        <columns>Account__c</columns>
        <columns>Year__c</columns>
        <columns>Rank__c</columns>
        <columns>Total_Dealerships__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2007</value>
        </filters>
        <label>All - 2007 Top 125 Dealers</label>
    </listViews>
    <nameField>
        <displayFormat>ID - {00000}</displayFormat>
        <label>Ranking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top 125 Ranking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>